...
                            <constraint firstItem="qXn-Fi-OL6" firstAttribute="trailing" secondItem="NzF-If-bAU" secondAttribute="trailing" constant="24" id="mpG-jA-Fub"/>
                            <constraint firstItem="mfL-nA-mDy" firstAttribute="trailing" secondItem="NzF-If-bAU" secondAttribute="trailing" id="sD4-ti-yBR"/>
                            <constraint firstItem="mfL-nA-mDy" firstAttribute="top" secondItem="NzF-If-bAU" secondAttribute="bottom" constant="8" id="wUi-Ie-s6g"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="9IC-lg-Ebm">
                        <barButtonItem key="leftBarButtonItem" image="BackBlue" id="tBr-X0-0NP">
                            <connections>
                                <action selector="btnBackTapped:" destination="2Rn-8Z-FnN" id="HP5-Uf-a6S"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                            <fontDescription key="fontDescription" name="Baskerville-SemiBoldItalic" family="Baskerville" pointSize="18"/>
                                        </variation>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRo-Va-H4o">
                                        <rect key="frame" x="24" y="203" width="327" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="kd3-q0-0aW">
                                                <rect key="frame" x="0.0" y="0.0" width="327" height="48"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" name="SanFranciscoText-Regular" family="San Francisco Text" pointSize="16"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="SanFranciscoText-Regular" family="San Francisco Text" pointSize="18"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="307" height="50"/>
                                                <color key="backgroundColor" red="0.0" green="0.45882352939999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="RHw-gz-QdQ"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="SanFranciscoText-Bold" family="San Francisco Text" pointSize="16"/>
                                                <state key="normal" title="Next">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                        <real key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
...
                                            <constraint firstAttribute="trailing" secondItem="w8L-yb-HK7" secondAttribute="trailing" id="w7Z-rs-edm"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LY7-YC-ebu">
                                        <rect key="frame" x="24" y="253" width="327" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P2Z-J8-Wv1" customClass="CustomUITextFieldNoPaste" customModule="Appointment" customModuleProvider="
                                                <rect key="frame" x="0.0" y="0.0" width="267" height="48"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <fontDescription key="fontDescription" name="SanFranciscoText-Regular" family="San Francisco Text" pointSize="16"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="maxLength">
...
                                                <rect key="frame" x="267" y="0.0" width="60" height="48"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="60" id="SuA-OU-jji"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="SanFranciscoText-Regular" family="San Francisco Text" pointSize="14"/>
                                                <state key="normal" title="SHOW">
                                                    <color key="titleColor" red="0.0" green="0.45882352939999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
                                                <variation key="heightClass=regular-widthClass=regular">
                                                    <fontDescription key="fontDescription" name="SanFranciscoText-Regular" family="San Francisco Text" pointSize="16"/>
                                                </variation>
                                                <connections>
...
