...
            txtFieldEmail.text = email
            txtFieldEmail.isUserInteractionEnabled = false
            nslayoutCaptchaHeight.constant = 0;
            nslayoutConstarintCaptchTop.constant = 8;
            nslayoutConstarintCaptchBelow.constant = 20;
            self.viewCaptche.isHidden = true
            UIButton.buttonUIHandling(button: btnSign, text: "Sign In", backgroundColor: ILColor.color(index: 7), textColor: .white, cornerRadius: 5)
            btnBack.isHidden = false;
            btnBack.setImage(UIImage.init(named: "BackBlue"), for: .normal);
            btnBack.tintColor = .black
            
            break;
        case .emailwithCaptcha:
...
